--- a/phantomjs-node/index.html
+++ b/phantomjs-node/index.html
@@ -122,6 +122,17 @@ the right version is installed, then it does nothing. You can install Phantom wi
 
 </div>
 <script src="/js/app.bundle.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-88927228-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+
 <script src="//cdn.jsdelivr.net/highlight.js/9.8.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
