--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>This is Amir.</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>This is Amir</title>
+    <link rel="stylesheet" href="style.scss" />
+    <script src="wave.js" defer></script>
   </head>
-  <link rel="stylesheet" href="style.scss" />
-  <script src="wave.js" defer></script>
   <body>
     <div id="vis"></div>
     <div id="content">
@@ -14,7 +17,8 @@
             <div class="columns is-vcentered">
               <div class="column is-8">
                 <h1 class="subtitle is-1 ">
-                    Hi there, <small class="subtitle is-1">my name is Amir.</small>
+                  Hi there,
+                  <small class="subtitle is-1">my name is Amir.</small>
                 </h1>
                 <p>
                   I am a software engineer, mentor and parent in San Francisco.
