Adds multiple waves

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <div class="hero-body">
           <div class="container">
             <div class="columns is-vcentered">
-              <div class="column is-8">
+              <div class="column is-6">
                 <h1 class="subtitle is-1 ">
-                  Hi there,
-                  <small class="subtitle is-1">my name is Amir.</small>
+                  Hi there, my name is Amir.
                 </h1>
                 <p>
                   I am a software engineer, mentor and parent in San Francisco.
