--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>This is Amir</title>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
     <link rel="stylesheet" href="style.scss" />
     <script src="wave.js" defer></script>
   </head>
@@ -35,18 +39,34 @@
                 <br />
                 <div class="buttons">
                   <a
-                    class="button is-info is-rounded"
+                    class="button is-primary is-rounded"
                     href="https://github.com/amir20"
                   >
-                    GitHub
+                    <span class="icon is-small">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>GitHub</span>
                   </a>
 
                   <a
                     class="button is-info is-rounded"
                     href="https://www.linkedin.com/in/amirraminfar"
                   >
-                    LinkedIn
+                    <span class="icon is-small">
+                      <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span>LinkedIn</span>
                   </a>
+
+                  <a
+                  class="button is-success is-rounded"
+                  href="https://stackoverflow.com/users/419075/amir-raminfar"
+                >
+                  <span class="icon is-small">
+                    <i class="fab fa-stack-overflow"></i>
+                  </span>
+                  <span>Stack Overflow</span>
+                </a>
                 </div>
               </div>
             </div>
