--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-    <link rel="stylesheet" href="style.scss" />
+    <link rel="stylesheet" type="text/css" href="style.scss" inline="inline" />
     <script src="wave.js" defer></script>
   </head>
   <body>
