--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
                 <p>
                   I am a software engineer, mentor and parent in San Francisco.
                   I work as a manager at
-                  <a href="https://about.google" target="_blank" rel="noopener">
-                    Google.
-                  </a>
+                  <a href="https://about.google" target="_blank" rel="noopener">Google</a>.
                   Previously, I have worked at
-                  <a
-                    href="https://www.oracle.com/industries/utilities/products/what-is-opower.html"
-                    >Opower</a
-                  >, Capital One and a few other start ups.
+                  <a target="_blank" rel="noopener"
+                    href="https://www.oracle.com/industries/utilities/products/what-is-opower.html">
+                    Opower</a>, 
+                    Capital One and a few other start ups.
                 </p>
                 <br />
                 <br />
