--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>This is Amir</title>
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
-    ></script>
-    <link rel="stylesheet" type="text/css" href="style.scss" inline="inline" />
-    <script src="wave.js" defer></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="/main.js" type="module"></script>
   </head>
   <body>
     <div id="vis"></div>
@@ -20,51 +16,36 @@
           <div class="container">
             <div class="columns is-vcentered">
               <div class="column is-6">
-                <h1 class="subtitle is-1 ">
-                  Hi there, my name is Amir.
-                </h1>
+                <h1 class="subtitle is-1">Hi there, my name is Amir.</h1>
                 <p>
-                  I am a software engineer, mentor and parent in San Francisco.
-                  I work as a manager at
-                  <a href="https://about.google" target="_blank" rel="noopener">Google</a>.
-                  Previously, I have worked at
-                  <a target="_blank" rel="noopener"
-                    href="https://www.oracle.com/industries/utilities/products/what-is-opower.html">
-                    Opower</a>, 
-                    Capital One and a few other start ups.
+                  I am a software engineer, mentor and parent in San Francisco. I work as a manager at
+                  <a href="https://about.google" target="_blank" rel="noopener">Google</a>. Previously, I have worked at
+                  <a target="_blank" rel="noopener" href="https://www.oracle.com/industries/utilities/products/what-is-opower.html"> Opower</a>, Capital One and
+                  a few other start ups.
                 </p>
                 <br />
                 <br />
                 <div class="buttons">
-                  <a
-                    class="button is-primary is-rounded"
-                    href="https://github.com/amir20"
-                  >
+                  <a class="button is-primary is-rounded" href="https://github.com/amir20">
                     <span class="icon is-small">
                       <i class="fab fa-github"></i>
                     </span>
                     <span>GitHub</span>
                   </a>
 
-                  <a
-                    class="button is-info is-rounded"
-                    href="https://www.linkedin.com/in/amirraminfar"
-                  >
+                  <a class="button is-info is-rounded" href="https://www.linkedin.com/in/amirraminfar">
                     <span class="icon is-small">
                       <i class="fab fa-linkedin"></i>
                     </span>
                     <span>LinkedIn</span>
                   </a>
 
-                  <a
-                  class="button is-success is-rounded"
-                  href="https://stackoverflow.com/users/419075/amir-raminfar"
-                >
-                  <span class="icon is-small">
-                    <i class="fab fa-stack-overflow"></i>
-                  </span>
-                  <span>Stack Overflow</span>
-                </a>
+                  <a class="button is-success is-rounded" href="https://stackoverflow.com/users/419075/amir-raminfar">
+                    <span class="icon is-small">
+                      <i class="fab fa-stack-overflow"></i>
+                    </span>
+                    <span>Stack Overflow</span>
+                  </a>
                 </div>
               </div>
             </div>
