--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>This is Amir</title>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
