--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>This is Amir</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/98919b504b.js" crossorigin="anonymous"></script>
     <script src="/main.js" type="module"></script>
   </head>
   <body>
