--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.0f904093.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>This is Amir</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/98919b504b.js" crossorigin="anonymous"></script>
     
-  <script type="module" crossorigin src="/assets/index.9d8a9ccc.js"></script>
+  <script type="module" crossorigin src="/assets/index.cf32fe40.js"></script>
   <link rel="modulepreload" href="/assets/vendor.9e1c8f0c.js">
   <link rel="stylesheet" href="/assets/index.83ad2e92.css">
 </head>
