--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-cream text-gray-700 dark:bg-gray-900 dark:text-gray-300 transition-colors">
+<html lang="en" class="text-gray-700 transition-colors bg-cream dark:bg-gray-900 dark:text-gray-300">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
