--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>This is Amir</title>
-
+    <!--head-html-->
     <!--preload-links-->
     <script src="https://kit.fontawesome.com/98919b504b.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/entry-client.js"></script>
